[gd_scene load_steps=28 format=3 uid="uid://dh2amoaopwvia"]

[ext_resource type="Script" path="res://levels/level_1.gd" id="1_gln08"]
[ext_resource type="PackedScene" uid="uid://c3yabqicq140k" path="res://player/player.tscn" id="1_wtv3g"]
[ext_resource type="PackedScene" uid="uid://slodq1ng6vky" path="res://actors/harvest_box.tscn" id="2_c8non"]
[ext_resource type="Texture2D" uid="uid://cwdbfrg8wtsem" path="res://assets/textures/ground42.png" id="2_w2oxw"]
[ext_resource type="PackedScene" uid="uid://bbotwqirenqxq" path="res://props/cropsoil.tscn" id="3_ksn5q"]
[ext_resource type="PackedScene" uid="uid://bw0jwgfd4dcxi" path="res://actors/enemy_1.tscn" id="4_05sir"]
[ext_resource type="PackedScene" uid="uid://d4cqt8aebdgp6" path="res://actors/ammo_dispenser.tscn" id="5_xpwkd"]
[ext_resource type="Texture2D" uid="uid://cangxfx8851a0" path="res://assets/skybox/skybox3.png" id="6_80xfk"]
[ext_resource type="PackedScene" uid="uid://bctsrdluihmwa" path="res://props/fence.tscn" id="6_obavf"]
[ext_resource type="Script" path="res://ui/HealthBar.gd" id="9_3nu7x"]
[ext_resource type="Texture2D" uid="uid://b8k58gjx3fdeo" path="res://assets/sprites/bar1/0.png" id="10_g3ibk"]
[ext_resource type="Texture2D" uid="uid://wscdfryf0pgh" path="res://assets/sprites/bar1/1.png" id="11_lspsh"]
[ext_resource type="Texture2D" uid="uid://buupma8u7fj1n" path="res://assets/sprites/bar1/2.png" id="12_0bky0"]
[ext_resource type="Texture2D" uid="uid://mlx50efvcit8" path="res://assets/sprites/bar1/3.png" id="13_mnwpj"]
[ext_resource type="Texture2D" uid="uid://7g3mjnvh0mk4" path="res://assets/sprites/bar1/4.png" id="14_2jntp"]
[ext_resource type="Texture2D" uid="uid://bwqj4n16lvhy0" path="res://assets/sprites/bar1/5.png" id="15_xlny6"]
[ext_resource type="Texture2D" uid="uid://dvkrfa888go8y" path="res://assets/sprites/bar1/6.png" id="16_o27b1"]
[ext_resource type="Texture2D" uid="uid://c7ygd0ht2g2ct" path="res://assets/sprites/bar1/7.png" id="17_31ul3"]
[ext_resource type="Texture2D" uid="uid://dpax85c3k0bsr" path="res://assets/sprites/bar1/8.png" id="18_bvjxe"]
[ext_resource type="Texture2D" uid="uid://dae457xa3nibl" path="res://assets/sprites/bar1/9.png" id="19_hxdkm"]

[sub_resource type="NavigationMesh" id="NavigationMesh_6l0bp"]
vertices = PackedVector3Array(-43.25, 0.0104, -99.5, -49.5, 0.0104, -99.5, -49.5, 0.0104, -88, -37, 0.0104, -99.5, -43.25, 0.0104, -99.5, -49.5, 0.0104, -88, -30.75, 0.0104, -99.5, -37, 0.0104, -99.5, -49.5, 0.0104, -88, -24.25, 0.0104, -99.5, -30.75, 0.0104, -99.5, -49.5, 0.0104, -88, -18, 0.0104, -99.5, -24.25, 0.0104, -99.5, -49.5, 0.0104, -88, -18, 0.0104, -99.5, -49.5, 0.0104, -88, -49.5, 0.0104, -76.25, -11.5, 0.0104, -99.5, -49.5, 0.0104, -41.25, -49.5, 0.0104, -29.5, 1.25, 0.0104, -7, -49.5, 0.0104, -6, -1, 0.0104, -6, -0.75, 0.0104, -7, -49.5, 0.0104, -17.75, 1.25, 0.0104, -99.5, -49.5, 0.0104, -64.5, -49.5, 0.0104, -52.75, 1.25, 0.0104, -7, -5.25, 0.0104, -99.5, -11.5, 0.0104, -99.5, -49.5, 0.0104, -76.25, -49.5, 0.0104, -17.75, -0.75, 0.0104, -7, 1.25, 0.0104, -7, -49.5, 0.0104, -29.5, -49.5, 0.0104, -52.75, -49.5, 0.0104, -41.25, 1.25, 0.0104, -7, 1.25, 0.0104, -99.5, -5.25, 0.0104, -99.5, -49.5, 0.0104, -76.25, -49.5, 0.0104, -64.5, 7, 0.0904, -0.5, 7, 0.0904, 0, 9, 0.0904, 0, 9, 0.0904, -0.5, 8, 0.0104, -0.5, 8, 0.0104, 0, 49.5, 0.0104, -43.75, 49.5, 0.0104, -49.75, 25.25, 0.0104, -99.5, 13.25, 0.0104, -99.5, 5, 0.0104, -5, 5.25, 0.0904, -0.5, 7, 0.0904, -0.5, 6.5, 0.0104, -1.625, 5.1875, 0.0104, -1.625, 6.125, 0.3304, -0.5, 5, 0.0104, -5, 7, 0.0904, -0.5, 9, 0.0904, -0.5, 8.2, 0.0104, -1.4, 6.5, 0.0104, -1.625, 8, 0.0104, -0.5, 5, 0.0104, -5, 9, 0.0904, -0.5, 11, 0.0904, -0.5, 49.5, 0.0104, -25, 49.5, 0.0104, -31.25, 5, 0.0104, -7, 8.2, 0.0104, -1.4, 10, 0.3304, -0.5, 12.2419, 0.0104, -1.29032, 49.5, 0.0104, -93.5, 49.5, 0.0104, -99.5, 43.25, 0.0104, -99.5, 1.25, 0.0104, -7, 5, 0.0104, -7, 49.5, 0.0104, -37.5, 49.5, 0.0104, -43.75, 13.25, 0.0104, -99.5, 1.25, 0.0104, -99.5, 49.5, 0.0104, -93.5, 43.25, 0.0104, -99.5, 37.25, 0.0104, -99.5, 49.5, 0.0104, -87.25, 5, 0.0104, -7, 49.5, 0.0104, -31.25, 49.5, 0.0104, -37.5, 49.5, 0.0104, -81, 49.5, 0.0104, -87.25, 37.25, 0.0104, -99.5, 49.5, 0.0104, -74.75, 49.5, 0.0104, -81, 37.25, 0.0104, -99.5, 49.5, 0.0104, -68.5, 49.5, 0.0104, -74.75, 37.25, 0.0104, -99.5, 11, 0.0904, -0.5, 11, 0.0904, 0, 49.5, 0.0104, 0, 49.5, 0.0104, -6.25, 12.4808, 0.0104, -0.721153, 12.4808, 0.0104, 0, 49.5, 0.0104, -49.75, 49.5, 0.0104, -56, 25.25, 0.0104, -99.5, 49.5, 0.0104, -62.25, 49.5, 0.0104, -68.5, 37.25, 0.0104, -99.5, 11, 0.0904, -0.5, 49.5, 0.0104, -6.25, 49.5, 0.0104, -12.5, 12.4259, 0.0104, -0.944443, 12.4808, 0.0104, -0.721153, 11, 0.0904, -0.5, 49.5, 0.0104, -12.5, 49.5, 0.0104, -18.75, 12.3276, 0.0104, -1.12931, 12.4259, 0.0104, -0.944443, 49.5, 0.0104, -62.25, 37.25, 0.0104, -99.5, 25.25, 0.0104, -99.5, 49.5, 0.0104, -56, 11, 0.0904, -0.5, 49.5, 0.0104, -18.75, 49.5, 0.0104, -25, 12.2419, 0.0104, -1.29032, 12.3276, 0.0104, -1.12931, -3, 0.0104, 3.25, -1.75, 0.0104, 3.25, -1, 0.0104, -5.25, -3, 0.0104, 3.25, -1, 0.0104, -5.25, -1, 0.0104, -6, -49.5, 0.0104, -6, -49.5, 0.0104, 4.25, -3.25, 0.0104, 4.25, 7, 0.0904, 3.5, 7, 0.0904, 4, 9, 0.0904, 4, 9, 0.0904, 3.5, 8, 0.0104, 3.5, 8, 0.0104, 4, 5, 0.0904, 3.5, 7, 0.0904, 3.5, 7, 0.0904, 0.5, 5, 0.0904, 0.5, 5, 0.1204, 1.5, 5, 0.1204, 2.5, 6, 0.3304, 3.5, 7, 0.1204, 2.5, 7, 0.1204, 1.5, 9, 0.0904, 0.5, 9, 0.0904, 0, 7, 0.0904, 0, 7, 0.0904, 0.5, 8, 0.0104, 0.5, 8, 0.0104, 0, -1.75, 0.0104, 3.25, -0.75, 0.0104, -4.75, -1, 0.0104, -5.25, -0.75, 0.0104, 4.75, -1.25, 0.0104, 5, -0.75, 0.0104, 7, 0.5, 0.0104, 6.75, 1.25, 0.0104, 7.75, 5.25, 0.0904, 4.5, 5, 0.0904, 3.5, 4.0625, 0.0104, 4.5625, 4.25, 0.0104, 5.3125, 9, 0.0904, 3.5, 10, 0.3304, 3.5, 10, 0.3304, 0.5, 9, 0.0904, 0.5, 9, 0.1204, 1.5, 9, 0.1204, 2.5, 10, 0.1204, 2.5, 10, 0.1204, 1.5, 5, 0.0904, 0.5, 5.25, 0.0904, -0.5, 5, 0.0104, -5, -0.75, 0.0104, -4.75, -1.75, 0.0104, 3.25, -0.75, 0.0104, 3.5, 3.85, 0.0104, 1.1, 5.1875, 0.0104, -1.625, -0.75, 0.0104, 3.5, -0.75, 0.0104, 4.75, 0.5, 0.0104, 6.75, 1.25, 0.0104, 7.75, 5, 0.0904, 3.5, 5, 0.0904, 0.5, 3.85, 0.0104, 1.1, 4.0625, 0.0104, 4.5625, 5, 0.1204, 2.5, 5, 0.1204, 1.5, 7, 0.0904, 3.5, 9, 0.0904, 3.5, 9, 0.0904, 0.5, 7, 0.0904, 0.5, 7, 0.1204, 1.5, 7, 0.1204, 2.5, 8, 0.0104, 3.5, 9, 0.1204, 2.5, 9, 0.1204, 1.5, 8, 0.0104, 0.5, 10, 0.3304, 0.5, 10, 0.3304, 3.5, 11, 0.0904, 3.5, 11, 0.0904, 0.5, 10, 0.1204, 1.5, 10, 0.1204, 2.5, 11, 0.1204, 2.5, 11, 0.1204, 1.5, 11, 0.0904, 3.5, 49.5, 0.0104, 4, 49.5, 0.0104, 0, 11, 0.0904, 0.5, 11, 0.1204, 1.5, 11, 0.1204, 2.5, 12.4808, 0.0104, 3.51923, 12.4808, 0.0104, 0.480766, 11, 0.0904, 3.5, 11, 0.0904, 4, 49.5, 0.0104, 4, 12.4808, 0.0104, 3.51923, 12.4808, 0.0104, 4, 49.5, 0.0104, 0, 11, 0.0904, 0, 11, 0.0904, 0.5, 12.4808, 0.0104, 0.480766, 12.4808, 0.0104, 0, 9, 0.0904, 4.5, 9, 0.0904, 4, 7, 0.0904, 4, 7, 0.0904, 4.5, 8, 0.0104, 4.5, 8, 0.0104, 4, 12.25, 0.0104, 99.5, 49.5, 0.0104, 87.5, 49.5, 0.0104, 75.5, 6, 0.0104, 99.5, 0, 0.0104, 9.25, 0, 0.0104, 13.25, 0.75, 0.0104, 13.5, 1.25, 0.0104, 8.5, 49.5, 0.0104, 27.75, 0.75, 0.0104, 22.5, 0, 0.0104, 22.75, 49.5, 0.0104, 39.75, 5.25, 0.0904, 4.5, 1.25, 0.0104, 7.75, 1.25, 0.0104, 8.5, 7, 0.0904, 4.5, 4.25, 0.0104, 5.3125, 4.7, 0.0104, 6.1, 5.85, 0.1204, 5.3, 49.5, 0.0104, 51.75, 49.5, 0.0104, 39.75, 0, 0.0104, 22.75, 9, 0.0904, 4.5, 7, 0.0904, 4.5, 1.25, 0.0104, 8.5, 6.41667, 0.0104, 5.83334, 7.70833, 0.1204, 5.16666, 8, 0.0104, 4.5, 5.85, 0.1204, 5.3, 4.7, 0.0104, 6.1, 11, 0.0904, 4.5, 9, 0.0904, 4.5, 1.25, 0.0104, 8.5, 7.34375, 0.0104, 6, 8.5625, 0.1204, 5.5, 9.78125, 0.0504, 5, 7.70833, 0.1204, 5.16666, 6.41667, 0.0104, 5.83334, 43.25, 0.0104, 99.5, 49.5, 0.0104, 99.5, 49.5, 0.0104, 87.5, 11, 0.0904, 4.5, 1.25, 0.0104, 8.5, 0.75, 0.0104, 13.5, 0.75, 0.0104, 22.5, 49.5, 0.0104, 27.75, 49.5, 0.0104, 15.75, 12.4259, 0.0104, 4.91666, 9.78125, 0.0504, 5, 8.5625, 0.1204, 5.5, 7.34375, 0.0104, 6, 37, 0.0104, 99.5, 43.25, 0.0104, 99.5, 49.5, 0.0104, 87.5, 0, 0.0104, 99.5, 6, 0.0104, 99.5, 49.5, 0.0104, 75.5, 49.5, 0.0104, 63.5, 30.75, 0.0104, 99.5, 37, 0.0104, 99.5, 49.5, 0.0104, 87.5, 24.75, 0.0104, 99.5, 30.75, 0.0104, 99.5, 49.5, 0.0104, 87.5, 18.5, 0.0104, 99.5, 24.75, 0.0104, 99.5, 49.5, 0.0104, 87.5, 49.5, 0.0104, 4, 11, 0.0904, 4, 11, 0.0904, 4.5, 49.5, 0.0104, 15.75, 12.4808, 0.0104, 4, 12.4259, 0.0104, 4.91666, 12.25, 0.0104, 99.5, 18.5, 0.0104, 99.5, 49.5, 0.0104, 87.5, 0, 0.0104, 22.75, 0, 0.0104, 99.5, 49.5, 0.0104, 63.5, 49.5, 0.0104, 51.75, -0.75, 0.0104, 7, -1.25, 0.0104, 5, -3, 0.0104, 5, -1.25, 0.0104, 8.5, -0.75, 0.0104, 15, -0.75, 0.0104, 13.5, -1.25, 0.0104, 8.5, -3, 0.0104, 5, -0.75, 0.0104, 13.5, 0, 0.0104, 13.25, 0, 0.0104, 9.25, -1.25, 0.0104, 8.5, -0.75, 0.0104, 15, -3, 0.0104, 5, -3.25, 0.0104, 4.25, -49.5, 0.0104, 4.25, -49.5, 0.0104, 14.75, -49.5, 0.0104, 21.25, -0.75, 0.0104, 21, -0.75, 0.0104, 15, -49.5, 0.0104, 14.75, -49.5, 0.0104, 89.5, -49.5, 0.0104, 99.5, -43.5, 0.0104, 99.5, -49.5, 0.0104, 89.5, -43.5, 0.0104, 99.5, -37.25, 0.0104, 99.5, -49.5, 0.0104, 89.5, -37.25, 0.0104, 99.5, -31, 0.0104, 99.5, -49.5, 0.0104, 89.5, -31, 0.0104, 99.5, -24.75, 0.0104, 99.5, -49.5, 0.0104, 79.75, -49.5, 0.0104, 89.5, -24.75, 0.0104, 99.5, -18.75, 0.0104, 99.5, 0, 0.0104, 22.75, -49.5, 0.0104, 50.5, -49.5, 0.0104, 60.25, -49.5, 0.0104, 79.75, -18.75, 0.0104, 99.5, -12.5, 0.0104, 99.5, -49.5, 0.0104, 70, -49.5, 0.0104, 79.75, -12.5, 0.0104, 99.5, -6.25, 0.0104, 99.5, -0.75, 0.0104, 22.5, -0.75, 0.0104, 21, -49.5, 0.0104, 21.25, -49.5, 0.0104, 31, -49.5, 0.0104, 70, -6.25, 0.0104, 99.5, 0, 0.0104, 99.5, 0, 0.0104, 22.75, -49.5, 0.0104, 60.25, 0, 0.0104, 22.75, -0.75, 0.0104, 22.5, -49.5, 0.0104, 31, -49.5, 0.0104, 40.75, 0, 0.0104, 22.75, -49.5, 0.0104, 40.75, -49.5, 0.0104, 50.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(14, 13, 12), PackedInt32Array(15, 18, 16), PackedInt32Array(16, 18, 17), PackedInt32Array(19, 21, 20), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(27, 26, 28), PackedInt32Array(28, 26, 29), PackedInt32Array(32, 31, 30), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(38, 37, 39), PackedInt32Array(41, 40, 42), PackedInt32Array(42, 40, 43), PackedInt32Array(47, 46, 48), PackedInt32Array(48, 46, 49), PackedInt32Array(48, 49, 45), PackedInt32Array(48, 45, 44), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 53), PackedInt32Array(56, 59, 57), PackedInt32Array(57, 59, 55), PackedInt32Array(57, 55, 58), PackedInt32Array(57, 58, 54), PackedInt32Array(62, 65, 63), PackedInt32Array(63, 65, 61), PackedInt32Array(63, 61, 64), PackedInt32Array(63, 64, 60), PackedInt32Array(67, 72, 73), PackedInt32Array(73, 72, 68), PackedInt32Array(68, 72, 74), PackedInt32Array(74, 72, 66), PackedInt32Array(74, 66, 71), PackedInt32Array(74, 71, 69), PackedInt32Array(69, 71, 70), PackedInt32Array(77, 76, 75), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(81, 78, 82), PackedInt32Array(82, 78, 83), PackedInt32Array(85, 84, 86), PackedInt32Array(86, 84, 87), PackedInt32Array(90, 89, 88), PackedInt32Array(93, 92, 91), PackedInt32Array(96, 95, 94), PackedInt32Array(99, 98, 97), PackedInt32Array(101, 100, 105), PackedInt32Array(105, 100, 104), PackedInt32Array(105, 104, 102), PackedInt32Array(102, 104, 103), PackedInt32Array(108, 107, 106), PackedInt32Array(111, 110, 109), PackedInt32Array(112, 115, 116), PackedInt32Array(116, 115, 113), PackedInt32Array(113, 115, 114), PackedInt32Array(117, 120, 121), PackedInt32Array(121, 120, 118), PackedInt32Array(118, 120, 119), PackedInt32Array(122, 125, 123), PackedInt32Array(123, 125, 124), PackedInt32Array(126, 129, 130), PackedInt32Array(130, 129, 127), PackedInt32Array(127, 129, 128), PackedInt32Array(133, 132, 131), PackedInt32Array(135, 134, 136), PackedInt32Array(136, 134, 139), PackedInt32Array(136, 139, 138), PackedInt32Array(136, 138, 137), PackedInt32Array(143, 142, 144), PackedInt32Array(144, 142, 145), PackedInt32Array(144, 145, 141), PackedInt32Array(144, 141, 140), PackedInt32Array(146, 151, 152), PackedInt32Array(152, 151, 150), PackedInt32Array(152, 150, 147), PackedInt32Array(147, 150, 153), PackedInt32Array(153, 150, 154), PackedInt32Array(154, 150, 149), PackedInt32Array(154, 149, 148), PackedInt32Array(158, 157, 159), PackedInt32Array(159, 157, 160), PackedInt32Array(159, 160, 156), PackedInt32Array(159, 156, 155), PackedInt32Array(163, 162, 161), PackedInt32Array(165, 164, 166), PackedInt32Array(166, 164, 167), PackedInt32Array(170, 169, 171), PackedInt32Array(171, 169, 172), PackedInt32Array(171, 172, 168), PackedInt32Array(176, 175, 177), PackedInt32Array(177, 175, 180), PackedInt32Array(177, 180, 179), PackedInt32Array(177, 179, 178), PackedInt32Array(178, 179, 174), PackedInt32Array(178, 174, 173), PackedInt32Array(182, 181, 188), PackedInt32Array(188, 181, 187), PackedInt32Array(188, 187, 183), PackedInt32Array(183, 187, 184), PackedInt32Array(184, 187, 186), PackedInt32Array(184, 186, 185), PackedInt32Array(194, 198, 195), PackedInt32Array(195, 198, 197), PackedInt32Array(195, 197, 193), PackedInt32Array(195, 193, 196), PackedInt32Array(195, 196, 189), PackedInt32Array(189, 196, 190), PackedInt32Array(190, 196, 191), PackedInt32Array(191, 196, 192), PackedInt32Array(202, 208, 203), PackedInt32Array(203, 208, 201), PackedInt32Array(203, 201, 207), PackedInt32Array(203, 207, 206), PackedInt32Array(203, 206, 204), PackedInt32Array(204, 206, 200), PackedInt32Array(204, 200, 205), PackedInt32Array(204, 205, 199), PackedInt32Array(212, 216, 209), PackedInt32Array(209, 216, 213), PackedInt32Array(213, 216, 215), PackedInt32Array(213, 215, 214), PackedInt32Array(214, 215, 211), PackedInt32Array(214, 211, 210), PackedInt32Array(220, 224, 221), PackedInt32Array(221, 224, 222), PackedInt32Array(222, 224, 217), PackedInt32Array(217, 224, 223), PackedInt32Array(223, 224, 219), PackedInt32Array(223, 219, 218), PackedInt32Array(225, 228, 226), PackedInt32Array(226, 228, 229), PackedInt32Array(229, 228, 227), PackedInt32Array(232, 231, 233), PackedInt32Array(233, 231, 234), PackedInt32Array(233, 234, 230), PackedInt32Array(238, 237, 239), PackedInt32Array(239, 237, 240), PackedInt32Array(239, 240, 236), PackedInt32Array(239, 236, 235), PackedInt32Array(241, 244, 242), PackedInt32Array(242, 244, 243), PackedInt32Array(246, 245, 247), PackedInt32Array(247, 245, 248), PackedInt32Array(250, 249, 251), PackedInt32Array(251, 249, 252), PackedInt32Array(256, 259, 253), PackedInt32Array(253, 259, 257), PackedInt32Array(257, 259, 258), PackedInt32Array(257, 258, 254), PackedInt32Array(254, 258, 255), PackedInt32Array(262, 261, 260), PackedInt32Array(263, 267, 268), PackedInt32Array(268, 267, 264), PackedInt32Array(264, 267, 266), PackedInt32Array(264, 266, 269), PackedInt32Array(269, 266, 270), PackedInt32Array(270, 266, 265), PackedInt32Array(271, 276, 272), PackedInt32Array(272, 276, 275), PackedInt32Array(272, 275, 277), PackedInt32Array(277, 275, 274), PackedInt32Array(277, 274, 278), PackedInt32Array(278, 274, 273), PackedInt32Array(281, 280, 279), PackedInt32Array(282, 288, 289), PackedInt32Array(289, 288, 290), PackedInt32Array(290, 288, 291), PackedInt32Array(291, 288, 283), PackedInt32Array(283, 288, 284), PackedInt32Array(284, 288, 285), PackedInt32Array(285, 288, 287), PackedInt32Array(285, 287, 286), PackedInt32Array(294, 293, 292), PackedInt32Array(296, 295, 297), PackedInt32Array(297, 295, 298), PackedInt32Array(301, 300, 299), PackedInt32Array(304, 303, 302), PackedInt32Array(307, 306, 305), PackedInt32Array(309, 312, 310), PackedInt32Array(310, 312, 313), PackedInt32Array(313, 312, 308), PackedInt32Array(313, 308, 311), PackedInt32Array(316, 315, 314), PackedInt32Array(320, 319, 317), PackedInt32Array(317, 319, 318), PackedInt32Array(322, 321, 323), PackedInt32Array(323, 321, 324), PackedInt32Array(326, 325, 327), PackedInt32Array(327, 325, 328), PackedInt32Array(330, 329, 331), PackedInt32Array(331, 329, 332), PackedInt32Array(334, 333, 335), PackedInt32Array(335, 333, 336), PackedInt32Array(336, 333, 337), PackedInt32Array(339, 338, 340), PackedInt32Array(340, 338, 341), PackedInt32Array(344, 343, 342), PackedInt32Array(347, 346, 345), PackedInt32Array(350, 349, 348), PackedInt32Array(353, 352, 351), PackedInt32Array(356, 355, 357), PackedInt32Array(357, 355, 354), PackedInt32Array(360, 359, 358), PackedInt32Array(363, 362, 361), PackedInt32Array(366, 365, 367), PackedInt32Array(367, 365, 364), PackedInt32Array(369, 368, 370), PackedInt32Array(370, 368, 371), PackedInt32Array(373, 372, 374), PackedInt32Array(374, 372, 376), PackedInt32Array(374, 376, 375), PackedInt32Array(378, 377, 379), PackedInt32Array(379, 377, 380), PackedInt32Array(381, 383, 382)]
cell_height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k421s"]
albedo_texture = ExtResource("2_w2oxw")
metallic_specular = 0.0
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="PlaneMesh" id="PlaneMesh_7vq62"]
material = SubResource("StandardMaterial3D_k421s")
size = Vector2(100, 200)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_7oydl"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_yia21"]
panorama = ExtResource("6_80xfk")
filter = false

[sub_resource type="Sky" id="Sky_wufsm"]
sky_material = SubResource("PanoramaSkyMaterial_yia21")

[sub_resource type="Environment" id="Environment_kgn7f"]
background_mode = 2
sky = SubResource("Sky_wufsm")

[node name="Level1" type="Node3D" groups=["LEVEL"]]
script = ExtResource("1_gln08")

[node name="Navigation" type="NavigationAgent3D" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Navigation"]
navigation_mesh = SubResource("NavigationMesh_6l0bp")

[node name="Environment" type="Node3D" parent="Navigation/NavigationRegion3D"]

[node name="Ground" type="Node3D" parent="Navigation/NavigationRegion3D/Environment"]

[node name="StaticBody3D" type="StaticBody3D" parent="Navigation/NavigationRegion3D/Environment/Ground"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Navigation/NavigationRegion3D/Environment/Ground/StaticBody3D"]
mesh = SubResource("PlaneMesh_7vq62")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Navigation/NavigationRegion3D/Environment/Ground/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_7oydl")

[node name="Terrain" type="Node3D" parent="Navigation/NavigationRegion3D/Environment"]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Navigation/NavigationRegion3D/Environment/Terrain"]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Navigation/NavigationRegion3D/Environment/Terrain/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -6)
size = Vector3(1, 2, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Navigation/NavigationRegion3D/Environment/Terrain/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -6)
size = Vector3(1, 2, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Navigation/NavigationRegion3D/Environment/Terrain/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -6)
size = Vector3(1, 2, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Navigation/NavigationRegion3D/Environment/Terrain/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -6)
size = Vector3(1, 2, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Navigation/NavigationRegion3D/Environment/Terrain/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, -6)
size = Vector3(1, 2, 1)

[node name="Props" type="Node3D" parent="Navigation/NavigationRegion3D/Environment"]

[node name="cropsoil" parent="Navigation/NavigationRegion3D/Environment/Props" instance=ExtResource("3_ksn5q")]
transform = Transform3D(1, 0, 0, 0, 0.55, 0, 0, 0, 1, 6, 0, 0)

[node name="cropsoil2" parent="Navigation/NavigationRegion3D/Environment/Props" instance=ExtResource("3_ksn5q")]
transform = Transform3D(1, 0, 0, 0, 0.55, 0, 0, 0, 1, 10, 0, 0)

[node name="cropsoil3" parent="Navigation/NavigationRegion3D/Environment/Props" instance=ExtResource("3_ksn5q")]
transform = Transform3D(1, 0, 0, 0, 0.55, 0, 0, 0, 1, 10, 0, 4)

[node name="cropsoil4" parent="Navigation/NavigationRegion3D/Environment/Props" instance=ExtResource("3_ksn5q")]
transform = Transform3D(1, 0, 0, 0, 0.55, 0, 0, 0, 1, 6, 0, 4)

[node name="HarvestBox" parent="Navigation/NavigationRegion3D/Environment" instance=ExtResource("2_c8non")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 8)

[node name="AmmoDispenser" parent="Navigation/NavigationRegion3D/Environment" instance=ExtResource("5_xpwkd")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, 4)

[node name="Fences" type="Node3D" parent="Navigation/NavigationRegion3D/Environment"]

[node name="FenceGroup" type="Node3D" parent="Navigation/NavigationRegion3D/Environment/Fences"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 22)

[node name="fence" parent="Navigation/NavigationRegion3D/Environment/Fences/FenceGroup" instance=ExtResource("6_obavf")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)

[node name="fence2" parent="Navigation/NavigationRegion3D/Environment/Fences/FenceGroup" instance=ExtResource("6_obavf")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, -4)

[node name="Player" parent="Navigation" instance=ExtResource("1_wtv3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10962, 0)

[node name="Enemy1" parent="Navigation" instance=ExtResource("4_05sir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 0)

[node name="Enemy2" parent="Navigation" instance=ExtResource("4_05sir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 13)

[node name="Enemy3" parent="Navigation" instance=ExtResource("4_05sir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 22)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kgn7f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-5.96046e-08, 0.34056, -0.940223, -5.16702e-10, 0.940223, 0.34056, 1, 2.07848e-08, -5.58657e-08, 0, 7.08469, 11.9959)
light_color = Color(0.87451, 0.54902, 0.223529, 1)
shadow_enabled = true

[node name="LevelCountdown" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
autostart = true

[node name="Tooltips" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(320, 240)
layout_mode = 3
anchors_preset = 0
offset_right = 643.0
offset_bottom = 239.0

[node name="DepositTooltip" type="Panel" parent="Tooltips"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 179.0
offset_right = 279.655
offset_bottom = 224.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltips/DepositTooltip"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 435.0
offset_bottom = 93.0
text = "PRESS E TO DEPOSIT CROPS"

[node name="HarvestTooltip" type="Panel" parent="Tooltips"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 179.0
offset_right = 279.655
offset_bottom = 224.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltips/HarvestTooltip"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 435.0
offset_bottom = 93.0
text = "PRESS E TO HARVEST CROP"

[node name="Harvesting" type="Panel" parent="Tooltips"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 178.0
offset_right = 279.655
offset_bottom = 223.0

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltips/Harvesting"]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 435.0
offset_bottom = 93.0
text = "			HARVESTING..."

[node name="HUD" type="Control" parent="."]
custom_minimum_size = Vector2(320, 240)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CropsSaved" type="RichTextLabel" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 184.0
offset_top = 1.0
offset_right = 338.0
offset_bottom = 59.0
text = "Crops saved: "

[node name="CropsHeld" type="RichTextLabel" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 184.0
offset_top = 33.0
offset_right = 325.0
offset_bottom = 77.0
text = "Crops Held: "

[node name="TimeText" type="RichTextLabel" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 85.0
offset_top = 15.0
offset_right = 125.0
offset_bottom = 55.0

[node name="HealthBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 321.0
offset_bottom = 239.0
script = ExtResource("9_3nu7x")

[node name="Container" type="Control" parent="HealthBar"]
layout_mode = 1
anchors_preset = 0
offset_right = 319.0
offset_bottom = 239.0

[node name="1" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_lspsh")

[node name="2" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_0bky0")

[node name="3" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_mnwpj")

[node name="4" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_2jntp")

[node name="5" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_xlny6")

[node name="6" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_o27b1")

[node name="7" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_31ul3")

[node name="8" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("18_bvjxe")

[node name="9" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("19_hxdkm")

[node name="0" type="Sprite2D" parent="HealthBar/Container"]
visible = false
texture_filter = 1
texture_repeat = 1
position = Vector2(33, 25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_g3ibk")

[connection signal="timeout" from="LevelCountdown" to="." method="_on_level_countdown_timeout"]
